# cmake-wizardry

./: CMakeLists.txt  README.md  main_injection.cpp  main_linktime.cpp  simulation.cpp  simulation.h
communication/: CMakeLists.txt
communication/include/: mac_interface.h
communication/injection/: CMakeLists.txt  injection_mac.cpp  injection_mac.h
communication/injection/locator/: CMakeLists.txt
communication/injection/locator/include/: communication_locator_interface.h
communication/injection/locator/rtos/: locator.cpp
communication/injection/locator/unix/: locator.cpp
communication/linktime/: CMakeLists.txt  linktime_mac.cpp  linktime_mac.h
osal/: CMakeLists.txt
osal/interfaces/: queue_interface.h
osal/rtos/: CmakeLists.txt
osal/rtos/dummy_rtos/: CMakeLists.txt  queue.hpp
osal/rtos/unix_rtos/: CMakeLists.txt  queue.hpp
osal/unix_injection/: CMakeLists.txt  unix_queue.hpp
